--- a/main.html
+++ b/main.html
@@ -1,16 +1,115 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Signup Form</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f7f9;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      form {
+        background: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        width: 400px;
+      }
+      h2 {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      label {
+        display: block;
+        margin-top: 10px;
+        font-weight: bold;
+      }
+      input, select, button {
+        width: 100%;
+        padding: 8px;
+        margin-top: 5px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+      .gender-options {
+        display: flex;
+        gap: 15px;
+        margin-top: 5px;
+      }
+      .gender-options label {
+        font-weight: normal;
+      }
+      .tos {
+        display: flex;
+        align-items: center;
+        margin-top: 15px;
+      }
+      .tos label {
+        margin-left: 5px;
+        font-weight: normal;
+      }
+      button {
+        background-color: #3498db;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+        margin-top: 20px;
+      }
+      button:hover {
+        background-color: #2980b9;
+      }
+    </style>
+  </head>
+  <body>
+    <form method="post">
+      <h2>Signup Form</h2>
 
-<html>
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" placeholder="Name" required>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Email" required>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+      <label>Gender</label>
+      <div class="gender-options">
+        <input type="radio" id="gender_m" name="gender" value="male" required>
+        <label for="gender_m">Male</label>
+        <input type="radio" id="gender_f" name="gender" value="female" required>
+        <label for="gender_f">Female</label>
+      </div>
 
-</body>
+      <label for="cars">Car Brands</label>
+      <select id="cars" name="cars" required>
+        <option value="">--Please choose an option--</option>
+        <option value="Toyota">Toyota</option>
+        <option value="BMW">BMW</option>
+        <option value="Mercedes">Mercedes</option>
+        <option value="Tesla">Tesla</option>
+      </select>
 
+      <label for="age">Age</label>
+      <input type="number" id="age" name="age" placeholder="Age" required>
+
+      <label for="dob">DOB</label>
+      <input type="date" id="dob" name="dob" required>
+
+      <label for="tel">Phone Number</label>
+      <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx">
+
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" placeholder="Password" required>
+
+      <div class="tos">
+        <input type="checkbox" id="tos" name="tos" required>
+        <label for="tos">I agree to the TOS</label>
+      </div>
+
+      <button type="submit">Submit</button>
+    </form>
+  </body>
 </html>
